--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo2.jpg" alt="WWR Logo">
+        <img src="images/logo2.jpg" alt="Rafting Website Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -87,7 +87,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 WWR Rafting | Your Name</p>
+        <p>©2025| Rapids Rafting Company | Derek Abraham Moscui Maldonado</p>
         <div>
         <a href="#"><img src="images/facebook.svg" alt="Facebook"></a>
         <a href="#"><img src="images/twitter.svg" alt="Twitter"></a>
